Fix Buttons Alignements

--- a/sass/3-modules/_more.sass
+++ b/sass/3-modules/_more.sass
@@ -23,6 +23,8 @@ a
   left: 50%
   margin-left: -240px
 
+  text-align: center
+
 
 hr
     border:         none
